RESOLVED FIXED146873
[WK2] Diagnostic logging messages are causing too much IPC
https://bugs.webkit.org/show_bug.cgi?id=146873
Summary [WK2] Diagnostic logging messages are causing too much IPC
Chris Dumez
Reported 2015-07-10 22:37:16 PDT
Diagnostic logging messages are causing too much IPC.
Attachments
Patch (20.67 KB, patch)
2015-07-10 22:48 PDT, Chris Dumez
no flags
Patch (20.52 KB, patch)
2015-07-10 23:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-07-10 22:37:44 PDT
Chris Dumez
Comment 2 2015-07-10 22:48:41 PDT
Ryosuke Niwa
Comment 3 2015-07-10 23:46:02 PDT
Comment on attachment 256644 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=256644&action=review > Source/WebCore/page/DiagnosticLoggingClient.h:45 > + static bool shouldLogGivenSampling(ShouldSample); I'm not certain if this is the most descriptive name. How about isLogSelectedInSample or shouldLogAfterSampling? > Source/WebCore/page/DiagnosticLoggingClient.h:56 > + // Log 5% of messages when sampling. I don't think we need this comment. The code speaks for itself. > Source/WebKit2/NetworkProcess/NetworkProcess.cpp:485 > + parentProcessConnection()->send(Messages::NetworkProcessProxy::LogPreSampledDiagnosticMessage(webPageID, message, description), 0); I don't think it makes sense to call these PreSampled. If anything, these are post sampling. Why don't we simply call it LogSampledDiagnosticMessage?
Chris Dumez
Comment 4 2015-07-10 23:54:23 PDT
Chris Dumez
Comment 5 2015-07-10 23:56:54 PDT
Comment on attachment 256649 [details] Patch Clearing flags on attachment: 256649 Committed r186707: <http://trac.webkit.org/changeset/186707>
Chris Dumez
Comment 6 2015-07-10 23:56:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.